# vemco_vr2c_lib

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/VR2CCommunicator/: VR2CCommunicator.cpp  VR2CCommunicator.hpp
src/VR2CDevice/: VR2CDevice.cpp  VR2CDevice.hpp
src/VR2CMessageParser/: VR2CMessageParser.cpp  VR2CMessageParser.hpp
src/VR2CMessageParser/messages/: VR2CDetection.hpp  VR2CStatus.hpp
src/commands/VR2CCommand/: Vr2CCommand.cpp  Vr2CCommand.hpp
src/interfaces/: VR2CInterfaces.hpp
src/interfaces/ArduinoSerial/: ArduinoSerial.cpp  ArduinoSerial.hpp
src/interfaces/BoostSerial/: BoostSerial.cpp  BoostSerial.hpp
src/interfaces/MockSerial/: MockSerial.cpp  MockSerial.hpp
src/response/VR2CResponse/: VR2CResponse.cpp  VR2CResponse.hpp
src/response/responses/InfoResponse/: InfoResponse.cpp  InfoResponse.hpp
src/response/responses/StatusResponse/: StatusResponse.cpp  StatusResponse.hpp
src/result/: VR2CResult.cpp  VR2CResult.hpp
tests/: run_tests.cpp
tests/vr2c_commands/: test_vr2c_commands.cpp
